--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- HEADER SECTION -->
@@ -25,7 +25,7 @@
                     <li><a href="#research" class="nav-link">Research</a></li>
                     <li><a href="#about" class="nav-link">About</a></li>
                     <li><a href="https://microsec.io" class="nav-link" target="_blank">MicroSec.io <i class="fas fa-external-link-alt"></i></a></li>
-                    <li><a href="https://www.microsec.io/company/contact" class="btn btn-primary">Contact Us</a></li>
+                    <li><a href="https://www.microsec.io/company/contact" class="btn btn-primary" target="_blank">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
@@ -165,7 +165,7 @@
                 <p class="footer-description">
                     Reach out to our team for research collaboration opportunities, report vulnerability disclosures or any media inquiries and press releases.
                 </p>
-                <a href="https://www.microsec.io/company/contact" class="btn btn-primary">Get In Touch</a>
+                <a href="https://www.microsec.io/company/contact" class="btn btn-primary" target="_blank">Get In Touch</a>
             </div>
             
             <div class="footer-copyright">
