--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="header-container">
             <div class="logo">
-                <img alt="Lab0xM" src="/assets/logos/Logo_Lab0xM.svg"/>
+                <img alt="Lab0xM" class="logo-svg" src="/assets/logos/Logo_Lab0xM.svg"/>
             </div>
             
             <nav>
