--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <ul class="nav-menu">
                     <li><a href="#research" class="nav-link">Research</a></li>
                     <li><a href="#about" class="nav-link">About</a></li>
-                    <li><a href="https://microsec.io" class="nav-link" target="_blank">MicroSec.io <i class="fas fa-external-link-alt"></i></a></li>
+                    <li><a href="https://microsec.io" class="nav-link" target="_blank">MicroSec.io  <i class="fas fa-external-link-alt"></i></a></li>
                     <li><a href="https://www.microsec.io/company/contact" class="btn btn-primary" target="_blank">Contact Us</a></li>
                 </ul>
             </nav>
@@ -41,7 +41,7 @@
                     <p class="hero-description">
                         Lab0xM is the dedicated zero-day research division of MicroSec, focused on discovering and responsibly disclosing zero-day vulnerabilities, IoT/OT security risks, and critical infrastructure threats.
                     </p>
-                    <a href="#research" class="btn btn-primary">View Latest Research</a>
+                    <a href="#research" class="btn btn-secondary">View Latest Research</a>
                 </div>
             </div>
         </section>
@@ -99,7 +99,7 @@
                                 Comprehensive study of firmware security in consumer IoT devices, revealing critical vulnerabilities.
                             </p>
 							<!-- EDIT: Replace with actual link to blog -->
-                            <a href="#" class="btn btn-secondary">Read More</a>
+                            <a href="#" class="btn btn-ghost">Read More</a>
                         </div>
                     </article>
                     
@@ -112,7 +112,7 @@
                                 Novel framework for implementing zero trust security in IoT networks.
                             </p>
 							<!-- EDIT: Replace with actual link to blog -->
-                            <a href="#" class="btn btn-secondary">Read More</a>
+                            <a href="#" class="btn btn-ghost">Read More</a>
                         </div>
                     </article>
                     
@@ -125,7 +125,7 @@
                                 Analysis of attack surfaces in modern SCADA systems and mitigation strategies.
                             </p>
 							<!-- EDIT: Replace with actual link to blog -->
-                            <a href="#" class="btn btn-secondary">Read More</a>
+                            <a href="#" class="btn btn-ghost">Read More</a>
                         </div>
                     </article>
                 </div>
