--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
 					<div class="hero-subtitle">Lab0xM</div>
 					<h1 class="hero-title">MicroSec&apos;s Zero-Day Research Lab</h1>
 					<p class="hero-description">
-						Lab0xM is the dedicated zero-day research division of MicroSec, focused on discovering and
-						responsibly disclosing zero-day vulnerabilities, IoT/OT security risks, and critical
-						infrastructure threats.
+						Lab0xM is the dedicated zero-day research division of MicroSec, focused on discovering and 
+						responsibly disclosing zero-day vulnerabilities, IoT/OT security risks, and critical infrastructure threats.
 					</p>
 					<a href="#research" class="btn btn-secondary">View Latest Research</a>
 				</div>
