--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 
 		<!-- RESEARCH TEAM SECTION -->
 		<section class="research-team" id="about">
-			<div class="research-team-container">
-				<h2 class="section-title">Research Team</h2>
+			<h2 class="section-title">Research Team</h2>
+  			<div class="research-team-container">
 
 				<!-- Team Member: Souvik Kandar -->
 				<div class="team-member">
@@ -176,7 +176,6 @@
 	<footer class="footer" id="contact">
 		<div class="footer-container">
 			<div class="footer-content">
-				<!--comment<h2 class="footer-title">Get In Touch</h2>-->
 				<p class="footer-description">
 					Reach out to our team for research collaboration opportunities, report vulnerability disclosures or
 					any media inquiries and press releases.
@@ -184,12 +183,15 @@
 				<a href="https://www.microsec.io/company/contact" class="btn btn-primary" target="_blank">Get In
 					Touch</a>
 			</div>
-
-			<div class="footer-copyright">
-				<p>Copyright &copy; 2025 MicroSec Pte Ltd. All rights reserved.</p>
-			</div>
 		</div>
 	</footer>
+
+<!-- COPYRIGHT SECTION -->
+<section class="copyright-section">
+    <div class="copyright-container">
+        <p>Copyright &copy; 2025 MicroSec Pte Ltd. All rights reserved.</p>
+    </div>
+</section>
 
 	<!-- SMOOTH SCROLLING SCRIPT -->
 	<script>
