reduced breakpoint 700 to 679

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			<div class="featured-research-container">
 				<h2 class="section-title">Featured Research</h2>
 				<p class="section-subtitle">
-					Read about all the discoveries and disclosures made by our research team at <a class="ext-link" href="https://www.microsec.io/resources/blog"> our blog <i class="fas fa-external-link-alt"></i>.</a>
+					Read about all the discoveries and disclosures made by our research team at <a class="ext-link" href="https://www.microsec.io/resources/blog"  target="_blank"> our blog <i class="fas fa-external-link-alt"></i>.</a>
 				</p>
 
 				<div class="research-posts">
