remove padding for research team and featured research containers, fixed team member card padding, changed read more to open in new tab

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 								<br><br>This disclosure explores how misconfigured third-party equipment inadvertently exposed a limited set of internal gRPC commands, the potential implications, and necessary security best practices.
 							</p>
 							<!-- EDIT: Replace with actual link to blog -->
-							<a href="https://www.microsec.io/posts/microsec-identifies-spacex-starlink-exposure-customer-side-misconfiguration" class="btn btn-ghost">Read More</a>
+							<a target="_blank" class="btn btn-ghost" href="https://www.microsec.io/posts/microsec-identifies-spacex-starlink-exposure-customer-side-misconfiguration">Read More</a>
 						</div>
 					</article>
 
@@ -134,7 +134,7 @@
 								Though originally intended for local deployment, widespread internet exposure has occurred, driven by innovative integrations within startups, smart home IoT systems, healthcare, and industrial IoT (IIoT/OT) environments.
 							</p>
 							<!-- EDIT: Replace with actual link to blog -->
-							<a href="https://www.microsec.io/posts/disclosure-of-critical-vulnerability-in-ollama-ai-model-server-unauthenticated-remote-api-access" class="btn btn-ghost">Read More</a>
+							<a target="_blank" class="btn btn-ghost" href="https://www.microsec.io/posts/disclosure-of-critical-vulnerability-in-ollama-ai-model-server-unauthenticated-remote-api-access" >Read More</a>
 						</div>
 					</article>
 
