--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 	<header class="header">
 		<div class="header-container">
 			<div class="logo">
-				<img alt="Lab0xM" class="logo-svg" src="/assets/logos/Logo_Lab0xM.svg"/>
-
+				<img alt="Lab0xM" class="logo-nav" src="/assets/logos/Logo_Lab0xM.svg"/>
 			</div>
 
 			<nav>
@@ -45,7 +44,9 @@
 		<section class="hero">
 			<div class="hero-container">
 				<div class="hero-content">
-					<div class="hero-subtitle">Lab0xM</div>
+					<div class="hero-subtitle">
+						<img alt="MicroSec" class="logo-hero" src="/assets/logos/Logo_microsec_io_colourful.svg"/>
+					</div>
 					<h1 class="hero-title">MicroSec&apos;s Zero-Day Research Lab</h1>
 					<p class="hero-description">
 						Lab0xM is the dedicated zero-day research division of MicroSec, focused on discovering and 
