--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 					<div class="hero-subtitle">
 						<img alt="MicroSec" class="logo-hero" src="/assets/logos/Logo_microsec_io_colourful.svg"/>
 					</div>
-					<h1 class="hero-title">MicroSec&apos;s Zero-Day Research Lab</h1>
+					<h1 class="hero-title">Introducing Lab0xM, <br>MicroSec&apos;s Zero-Day Research Lab</h1>
 					<p class="hero-description">
 						Lab0xM is the dedicated zero-day research division of MicroSec, focused on discovering and 
 						responsibly disclosing zero-day vulnerabilities, IoT/OT security risks, and critical infrastructure threats.
 					</p>
-					<a href="#research" class="btn btn-secondary">View Featured Research</a>
+					<a href="#research" class="btn btn-secondary">Explore Our Research</a>
 				</div>
 			</div>
 		</section>
