--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<div class="hero-subtitle">
 						<img alt="MicroSec" class="logo-hero" src="/assets/logos/Logo_microsec_io_colourful.svg"/>
 					</div>
-					<h1 class="hero-title">Introducing Lab0xM, <br>MicroSec&apos;s Zero-Day Research Lab</h1>
+					<h1 class="hero-title">Introducing Lab0xM, MicroSec&apos;s Zero-Day Research Lab</h1>
 					<p class="hero-description">
 						Lab0xM is the dedicated zero-day research division of MicroSec, focused on discovering and 
 						responsibly disclosing zero-day vulnerabilities, IoT/OT security risks, and critical infrastructure threats.
