--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<section class="hero">
 			<div class="hero-container">
 				<div class="hero-content">
-					<div class="hero-subtitle">
+					<div class="logo">
 						<img alt="MicroSec" class="logo-hero" src="/assets/logos/Logo_microsec_io_colourful.svg"/>
 					</div>
 					<h1 class="hero-title">Introducing Lab0xM, <br>MicroSec&apos;s Zero-Day Research Lab</h1>
