--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-	<meta http-equiv='cache-control' content='no-cache'> 
-	<meta http-equiv='expires' content='0'> 
+	<meta http-equiv='cache-control' content='no-cache'>
+	<meta http-equiv='expires' content='0'>
 	<meta http-equiv='pragma' content='no-cache'>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,7 @@
 	<header class="header">
 		<div class="header-container">
 			<div class="logo">
-				<img alt="Lab0xM" class="logo-nav" src="/assets/logos/Logo_Lab0xM.svg"/>
+				<img alt="Lab0xM" class="logo-nav" src="/assets/logos/Logo_Lab0xM.svg" />
 			</div>
 
 			<nav>
@@ -45,12 +45,13 @@
 			<div class="hero-container">
 				<div class="hero-content">
 					<div class="logo">
-						<img alt="MicroSec" class="logo-hero" src="/assets/logos/Logo_microsec_io_colourful.svg"/>
+						<img alt="MicroSec" class="logo-hero" src="/assets/logos/Logo_microsec_io_colourful.svg" />
 					</div>
 					<h1 class="hero-title">Introducing Lab0xM, <br>MicroSec&apos;s Zero-Day Research Lab</h1>
 					<p class="hero-description">
-						Lab0xM is the dedicated zero-day research division of MicroSec, focused on discovering and 
-						responsibly disclosing zero-day vulnerabilities, IoT/OT security risks, and critical infrastructure threats.
+						Lab0xM is the dedicated zero-day research division of MicroSec, focused on discovering and
+						responsibly disclosing zero-day vulnerabilities, IoT/OT security risks, and critical
+						infrastructure threats.
 					</p>
 					<a href="#research" class="btn btn-secondary">Explore Our Research</a>
 				</div>
@@ -97,7 +98,9 @@
 			<div class="featured-research-container">
 				<h2 class="section-title">Featured Research</h2>
 				<p class="section-subtitle">
-					Read about all the discoveries and disclosures made by our research team at <a class="ext-link" href="https://www.microsec.io/resources/blog"  target="_blank"> our blog <i class="fas fa-external-link-alt"></i>.</a>
+					Read about all the discoveries and disclosures made by our research team at <a class="ext-link"
+						href="https://www.microsec.io/resources/blog" target="_blank"> our blog <i
+							class="fas fa-external-link-alt"></i></a>.
 				</p>
 
 				<!-- EDIT: ADD RESEARCH ARTICLES IN THIS SECTION -->
@@ -108,15 +111,22 @@
 							<!-- EDIT: Replace with Category of research -->
 							<span class="research-category">IoT Security</span>
 							<!-- EDIT: Replace with blog title  -->
-							<h3 class="research-post-title">MicroSec Identifies SpaceX Starlink Exposure (Customer Side Misconfiguration)
+							<h3 class="research-post-title">MicroSec Identifies SpaceX Starlink Exposure (Customer Side
+								Misconfiguration)
 							</h3>
 							<!-- EDIT: Replace with short summary of post, or first few sentences. -->
 							<p class="research-post-description">
-								Satellite internet infrastructure, while revolutionary, underscores critical cybersecurity responsibilities. MicroSec Researchers recently identified and responsibly disclosed an unintended exposure involving a Starlink customer terminal. 
-								<br><br>This disclosure explores how misconfigured third-party equipment inadvertently exposed a limited set of internal gRPC commands, the potential implications, and necessary security best practices.
+								Satellite internet infrastructure, while revolutionary, underscores critical
+								cybersecurity responsibilities. MicroSec Researchers recently identified and responsibly
+								disclosed an unintended exposure involving a Starlink customer terminal.
+								<br><br>This disclosure explores how misconfigured third-party equipment inadvertently
+								exposed a limited set of internal gRPC commands, the potential implications, and
+								necessary security best practices.
 							</p>
 							<!-- EDIT: Replace with actual link to blog -->
-							<a target="_blank" class="btn btn-ghost" href="https://www.microsec.io/posts/microsec-identifies-spacex-starlink-exposure-customer-side-misconfiguration">Read More</a>
+							<a target="_blank" class="btn btn-ghost"
+								href="https://www.microsec.io/posts/microsec-identifies-spacex-starlink-exposure-customer-side-misconfiguration">Read
+								More</a>
 						</div>
 					</article>
 
@@ -126,16 +136,25 @@
 							<!-- EDIT: Replace with Category of research -->
 							<span class="research-category">IoT Security</span>
 							<!-- EDIT: Replace with blog title -->
-							<h3 class="research-post-title">Disclosure of Critical Vulnerability in Ollama AI Model Server: Unauthenticated Remote API Access
+							<h3 class="research-post-title">Disclosure of Critical Vulnerability in Ollama AI Model
+								Server: Unauthenticated Remote API Access
 							</h3>
 							<!-- EDIT: Replace with short summary of post, or first few sentences. -->
 							<p class="research-post-description">
-								MicroSec Researchers identified a potential critical vulnerability in the Ollama AI Model Server, an open-source platform designed for deploying large language models (LLMs) locally. Ollama servers exposed to the internet do not enforce authentication or access controls, allowing unauthenticated attackers to remotely interact with, modify, and control AI models.
+								MicroSec Researchers identified a potential critical vulnerability in the Ollama AI
+								Model Server, an open-source platform designed for deploying large language models
+								(LLMs) locally. Ollama servers exposed to the internet do not enforce authentication or
+								access controls, allowing unauthenticated attackers to remotely interact with, modify,
+								and control AI models.
 								<br><br>
-								Though originally intended for local deployment, widespread internet exposure has occurred, driven by innovative integrations within startups, smart home IoT systems, healthcare, and industrial IoT (IIoT/OT) environments.
+								Though originally intended for local deployment, widespread internet exposure has
+								occurred, driven by innovative integrations within startups, smart home IoT systems,
+								healthcare, and industrial IoT (IIoT/OT) environments.
 							</p>
 							<!-- EDIT: Replace with actual link to blog -->
-							<a target="_blank" class="btn btn-ghost" href="https://www.microsec.io/posts/disclosure-of-critical-vulnerability-in-ollama-ai-model-server-unauthenticated-remote-api-access" >Read More</a>
+							<a target="_blank" class="btn btn-ghost"
+								href="https://www.microsec.io/posts/disclosure-of-critical-vulnerability-in-ollama-ai-model-server-unauthenticated-remote-api-access">Read
+								More</a>
 						</div>
 					</article>
 
@@ -148,7 +167,8 @@
 			<div class="research-CVE-container">
 				<h2 class="section-title">Vulnerability Disclosures</h2>
 				<p class="section-subtitle">
-					Discover all the vulnerabilities in critical IoT, OT, ICS, medical, and embedded systems that were identified and responsibly disclosed by our Lab0xM team.
+					Discover all the vulnerabilities in critical IoT, OT, ICS, medical, and embedded systems that were
+					identified and responsibly disclosed by our Lab0xM team.
 				</p>
 				<table>
 					<thead>
@@ -162,32 +182,56 @@
 						<!-- Row 1 -->
 						<tr>
 							<td>CVE-2025-0896</td>
-							<td><p>Orthanc server prior to version 1.5.8 does not enable basic authentication by default when remote access is enabled. This could result in unauthorized access by an attacker.</p></td>
-							<td><a target="_blank" class="btn btn-ghost" href="https://nvd.nist.gov/vuln/detail/CVE-2025-0896">View CVE</a></td>
+							<td>
+								<p>Orthanc server prior to version 1.5.8 does not enable basic authentication by default
+									when remote access is enabled. This could result in unauthorized access by an
+									attacker.</p>
+							</td>
+							<td><a target="_blank" class="btn btn-ghost"
+									href="https://nvd.nist.gov/vuln/detail/CVE-2025-0896">View CVE</a></td>
 						</tr>
 						<!-- Row 2 -->
 						<tr>
 							<td>CVE-2025-1863</td>
-							<td><p>Default authentication is disabled, allowing unauthenticated access to device settings and data.</p></td>
-							<td><a target="_blank" class="btn btn-ghost" href="https://nvd.nist.gov/vuln/detail/cve-2025-1863">View CVE</a></td>
+							<td>
+								<p>Default authentication is disabled, allowing unauthenticated access to device
+									settings and data.</p>
+							</td>
+							<td><a target="_blank" class="btn btn-ghost"
+									href="https://nvd.nist.gov/vuln/detail/cve-2025-1863">View CVE</a></td>
 						</tr>
 						<!-- Row 3 -->
 						<tr>
 							<td>CVE-2025-1907</td>
-							<td><p>Instantel Micromate lacks authentication on a configuration port which could allow an attacker to execute commands if connected.</p></td>
-							<td><a target="_blank" class="btn btn-ghost" href="https://nvd.nist.gov/vuln/detail/CVE-2025-1907">View CVE</a></td>
+							<td>
+								<p>Instantel Micromate lacks authentication on a configuration port which could allow an
+									attacker to execute commands if connected.</p>
+							</td>
+							<td><a target="_blank" class="btn btn-ghost"
+									href="https://nvd.nist.gov/vuln/detail/CVE-2025-1907">View CVE</a></td>
 						</tr>
 						<!-- Row 4 -->
 						<tr>
 							<td>CVE-2025-2567</td>
-							<td><p>An attacker could modify or disable settings, disrupt fuel monitoring and supply chain operations, leading to disabling of ATG monitoring. This would result in potential safety hazards in fuel storage and transportation.</p></td>
-							<td><a target="_blank" class="btn btn-ghost" href="https://nvd.nist.gov/vuln/detail/CVE-2025-2567">View CVE</a></td>
+							<td>
+								<p>An attacker could modify or disable settings, disrupt fuel monitoring and supply
+									chain operations, leading to disabling of ATG monitoring. This would result in
+									potential safety hazards in fuel storage and transportation.</p>
+							</td>
+							<td><a target="_blank" class="btn btn-ghost"
+									href="https://nvd.nist.gov/vuln/detail/CVE-2025-2567">View CVE</a></td>
 						</tr>
 						<!-- Row 5 -->
 						<tr>
 							<td>CVE-2025-5310</td>
-							<td><p>Dover Fueling Solutions ProGauge MagLink LX Consoles expose an undocumented and unauthenticated target communication framework (TCF) interface on a specific port. Files can be created, deleted, or modified, potentially leading to remote code execution.</p></td>
-							<td><a target="_blank" class="btn btn-ghost" href="https://nvd.nist.gov/vuln/detail/CVE-2025-5310">View CVE</a></td>
+							<td>
+								<p>Dover Fueling Solutions ProGauge MagLink LX Consoles expose an undocumented and
+									unauthenticated target communication framework (TCF) interface on a specific port.
+									Files can be created, deleted, or modified, potentially leading to remote code
+									execution.</p>
+							</td>
+							<td><a target="_blank" class="btn btn-ghost"
+									href="https://nvd.nist.gov/vuln/detail/CVE-2025-5310">View CVE</a></td>
 						</tr>
 					</tbody>
 				</table>
@@ -197,7 +241,7 @@
 		<!-- RESEARCH TEAM SECTION -->
 		<section class="research-team" id="about">
 			<h2 class="section-title">Research Team</h2>
-  			<div class="research-team-container">
+			<div class="research-team-container">
 
 				<!-- Team Member: Souvik Kandar -->
 				<div class="team-member">
@@ -236,12 +280,12 @@
 		</div>
 	</footer>
 
-<!-- COPYRIGHT SECTION -->
-<section class="copyright-section">
-    <div class="copyright-container">
-        <p>Copyright &copy; 2025 MicroSec Pte Ltd. All rights reserved.</p>
-    </div>
-</section>
+	<!-- COPYRIGHT SECTION -->
+	<section class="copyright-section">
+		<div class="copyright-container">
+			<p>Copyright &copy; 2025 MicroSec Pte Ltd. All rights reserved.</p>
+		</div>
+	</section>
 
 	<!-- SMOOTH SCROLLING SCRIPT -->
 	<script>
