added vuln button

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 						responsibly disclosing zero-day vulnerabilities, IoT/OT security risks, and critical
 						infrastructure threats.
 					</p>
-					<a href="#research" class="btn btn-secondary">Explore Our Research</a>
+					<div class="hero-cta"><a href="#research" class="btn btn-primary">Explore Our Research</a>
+						<a href="#disclosures" class="btn btn-secondary">Vulnerability Disclosures</a>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -163,7 +165,7 @@
 		</section>
 
 		<!-- VULNERABILITY DISCLOSURES SECTION -->
-		<section class="research-CVE">
+		<section class="research-CVE" id="disclosures">
 			<div class="research-CVE-container">
 				<h2 class="section-title">Vulnerability Disclosures</h2>
 				<p class="section-subtitle">
