--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<meta name="description"
 		content="Lab0xM - The MicroSec Research Lab focused on zero-day research, vulnerability discovery, and cybersecurity threats.">
 	<title>Lab0xM - The MicroSec Research Lab</title>
+	<link rel="icon" type="image/x-icon" href="/assets/logos/favicon.svg">
 
 	<!-- Font Awesome Icons -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -29,6 +30,7 @@
 			<nav>
 				<ul class="nav-menu">
 					<li><a href="#research" class="nav-link">Research</a></li>
+					<li><a href="#disclosures" class="nav-link">Disclosures</a></li>
 					<li><a href="#about" class="nav-link">About</a></li>
 					<li><a href="https://microsec.io" class="nav-link" target="_blank">MicroSec.io <i
 								class="fas fa-external-link-alt"></i></a></li>
