remove disclosures from top nav

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 
 <body>
 	<!-- HEADER SECTION -->
-	<header class="header">
+	<header class="header"  id="top">
 		<div class="header-container">
 			<div class="logo">
-				<img alt="Lab0xM" class="logo-nav" src="/assets/logos/Logo_Lab0xM.svg" />
+				<img href="top" alt="Lab0xM" class="logo-nav" src="/assets/logos/Logo_Lab0xM.svg" />
 			</div>
 
 			<nav>
 				<ul class="nav-menu">
 					<li><a href="#research" class="nav-link">Research</a></li>
-					<li><a href="#disclosures" class="nav-link">Disclosures</a></li>
+					<!-- NOTE: to be added in future <li><a href="#disclosures" class="nav-link">Disclosures</a></li> -->
 					<li><a href="#about" class="nav-link">About</a></li>
 					<li><a href="https://microsec.io" class="nav-link" target="_blank">MicroSec.io <i
 								class="fas fa-external-link-alt"></i></a></li>
