--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<header class="header"  id="top">
 		<div class="header-container">
 			<div class="logo">
-				<img href="top" alt="Lab0xM" class="logo-nav" src="/assets/logos/Logo_Lab0xM.svg" />
+				<img alt="Lab0xM" class="logo-nav" src="/assets/logos/Logo_Lab0xM.svg" />
 			</div>
 
 			<nav>
